Added deepseek API, still trying to fix vulnerabilities

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Alice Workflow Manager - A powerful tool for managing and executing AI-driven workflows"
+      content="Project Alice - Agentic Workflow Manager - A powerful tool for managing and executing AI-driven workflows"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Alice Workflow Manager</title>
+    <title>Project Alice - Agentic Workflow Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
